apps/docs/design/core/sidebar.css
.sidebar-link {
  font-weight: 450;
  border-radius: 0.5rem;
}

.sidebar-link--sub {
}

.sidebar-link:hover {
  background-color: color-mix(
    in srgb,
    var(--gds-color-l2-background-secondary),
    var(--gds-color-l3-states-light-hover)
  );
}

.sidebar-link:active {
  background-color: color-mix(
    in srgb,
    var(--gds-color-l2-background-secondary),
    var(--gds-color-l3-states-light-pressed)
  );
}

.sidebar-link.active {
  background-color: var(--gds-color-l3-background-secondary);
}

